# threadmycode

./: README.md  README.rst  setup.cfg
src/threadmycode/: __init__.py  testThr.py  threadmycode.py
