[metadata]
name = threadmycode
version = 0.0.5
author = Seeerajudeen
author_email = seerajudeensm@gmail.com
description = Add python code in threading mode
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seerajudeensm/threadmycode
project_urls =
    Bug Tracker = https://github.com/seerajudeensm/threadmycode/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src


